# hrzoo-hpc-users-back

./: .envrc  .gitignore  README.md
accounts-hpc/: .lvimrc  MANIFEST.in  Makefile  alembic.ini  pyproject.toml  requirements.txt  setup.py
accounts-hpc/alembic/: env.py
accounts-hpc/alembic/versions/: 1b04100c64f1_added_is_deactivated_field.py  279bca80e20b_added_is_activated_project_and_is_.py  279bca80e20b_added_is_active_project_and_is_.py  27f656f0ac00_delete_redundant_person_uniqueid.py  33e86c0fde3b_added_person_type_field.py  3eaf5dccc6b4_remove_person_oib_field.py  421b74b19d9c_added_mail_project_is_activated_and_mail_.py  4ecf67c4b990_remove_slipped_mail_project_sshkey_field.py  4f28e6e80197_added_type_create_field.py  5424372ed0c7_add_new_fields_related_to_ssh_key_.py  6949b64768df_remove_mail_is_subscribed.py  7651071cd30e_create_initial_revision.py  899730d36e9b_added_mail_project_mapping_fields.py  95a2a70e50b8_added_identifier_field.py  970ac9410073_rename_username_field_and_extend_it.py  bd754fd260ed_add_skip_defgid_field.py  d0dccfda2b05_added_mail_project__mapping_flag_fields.py  d6719a2b2966_added_identifier_field.py  f9637001882f_added_mail_is_deactivated_and_mail_is_.py  fb8517e8ee1a_add_boolean_fields_on_user_and_rename_.py  fb9aa043b195_rename_it_as_person_uniqueid.py
accounts-hpc/config/: accounts-hpc.conf  accounts-hpc.conf.template  deploy-config.sh  email-template-activate-user.txt  email-template-deactivate-user-en.txt  email-template-new-key-en.txt  email-template-new-key.txt  email-template-new-user.txt  replacestring_map.json  users_map.json
accounts-hpc/config/emails/: email-template-activate-user-en.txt  email-template-deactivate-user.txt  email-template-del-key-en.txt  email-template-del-key.txt  email-template-new-user-en.txt
accounts-hpc/cron/: ah-setgid
accounts-hpc/helpers/: ah-setgid.py  rename_username.sql
accounts-hpc/init/: hrzoo-accounts-taskd.service
accounts-hpc/lint/: ale-exe-autoflake.sh  ale-exe-autoimport.sh  ale-exe-autopep8.sh  ale-exe-mypy.sh  ale-exe-pyflakes.sh
accounts-hpc/logrotate/: cache  logfile
accounts-hpc/modules/: config.py  db.py  emailsend.py  exceptions.py  http.py  httpconn.py  log.py  shared.py  utils.py
accounts-hpc/modules/tasks/: apisync.py  createdirectories.py  emailsend.py  fairshare.py  ldapupdate.py  listsubscribe.py  usermetadata.py
acl-galaxy/: aaiedu.py  hzsi_srce.conf  hzsi_srce.py
docker/: .env  docker-compose-extnet.yml  docker-compose.yml
docker/ldap-client/: Dockerfile  Dockerfile.debian  Dockerfile.debian11  Dockerfile.debian12  Dockerfile.opensuse15  docker-run-hrzoo-ldapclient-debian.sh  docker-run-hrzoo-ldapclient-debian11.sh  docker-run-hrzoo-ldapclient-debian12.sh  docker-run-hrzoo-ldapclient-opensuse15.sh  docker-run-hrzoo-ldapclient.sh  pypath.sh  syncsite.sh
docker/ldap-client/ldap-conf/etc_openldap/: ldap.conf.debian
docker/ldap-client/rpms/: migrationtools-47-15.el8.noarch.rpm  python3-bonsai-1.5.1-1.el8.srce.x86_64.rpm  python3-docopt-0.6.2-8.el8.srce.noarch.rpm
docker/ldap-server/: Dockerfile  README.md  base.ldif  bootstrap-ldap-orgproj.sh  bootstrap-ldap.sh  destroy-ldap.sh  docker-run-hrzoo-ldapserv.sh  group.ldif  passwd.ldif
docker/ldap-server/certs/: ldap.cert  ldap.csr  ldap.key  root.cert  root.csr  root.key  root.srl
docker/ldap-server/etc_supervisord.d/: hrzoo-ldap.ini
docker/ldap-server/rpms/: python3-ssh-ldap-pubkey-1.4.0-1.el8.srce.noarch.rpm  python39-pyasn1-0.4.8-1.el8.srce.noarch.rpm  python39-pyasn1-epel.spec  python39-pyasn1-modules-0.4.8-1.el8.srce.noarch.rpm
docker/ldap-server/rpms-specs/: nosphinx+provides.patch
docker/migrationtools/: Dockerfile  README.md  docker-run-migrationtools.sh
(+30 files in other folders)
